tests/NormalTests/paczka1/small_fuzzy/10733619.err
Error in line 10: A93 A93 -5,2
Error in line 3: A93 A93 79,4
Error in line 11: A93 S190 28,9
